[package]
name = "jimaku"
description = "A subtitle downloader"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "2.4.0", features = ["json"] }
querystring = "1.1.0"
log = "0.4.17"
simplelog = "0.12.0"