[package]
name = "jimaku"
description = "A subtitle downloader"
version = "0.2.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }
querystring = "1.1.0"
log = "0.4.22"
simplelog = "0.12.2"

[lib]
name = "jimaku"
path = "src/lib.rs"

[[bin]]
name = "jimaku"
path = "src/main.rs"
